since 1.0.0:
    - Restructured grrSearch in such a way that sped up the benchmark test by
      almost 200%
    - Fixed a bug with the * quantifier that was causing endless empty
      transition loops
    - Fixed a bug where grrMatch and grrSearch weren't properly processing tab
      characters

since 1.0.1:
    - The -e option now uses the EDITOR environment variable instead of the
      DEFAULT_EDITOR variable.