@@ -9,3 +9,5 @@ since 1.0.0:
 since 1.0.1:
     - The -e option now uses the EDITOR environment variable instead of the
       DEFAULT_EDITOR variable.
+    - A history file is now used.  The -y option has been added to disable the
+      history file's use.
